--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .topbar {
   width: 100%;
   height: 50px;
-  background-color: black;
+  background-color: tomato;
   display: flex;
   align-items: center;
 }
